Fixed: Sidebar images and sticky overlappings

--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -39,7 +39,7 @@
 
 	@include mq(desktop) {
 		position: fixed;
-		z-index: 1;
+		z-index: 2;
 		width: 100%;
 	}
 
