--- a/site-sass/site-specific/site.post-standard.scss
+++ b/site-sass/site-specific/site.post-standard.scss
@@ -170,14 +170,14 @@
 	margin-bottom: 20px;
   height: 25px;
   width: 100%;
-  padding: 0 30px;
+  //padding: 0 30px;
 
 }
 
 .fs-sidebar .side-box a {
   display: block;
-  max-width: 346.667px;
-  max-height: 195px;
+  max-width: 100%;
+  max-height: 100%;
   overflow: hidden;
 }
 
